feature: Figuring and setup the stripe merchant

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 PORT=8000
 DATABASE=mongodb://localhost:27017/hotel_booking
+JWT_SECRET=ASDAS!a$!^%&%!asdASDASD
+STRIPE_SECRET=sk_test_Mt0e9w6oIoxRFJXbmblOhwYi
+STRIPE_REDIRECT_URL=http://localhost:3000/stripe/callback
+STRIPE_SETTING_REDIRECT_URL=http://localhost:3000/dashboard/seller
