--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-client/node_modules
+client/node_modules/
+client/.env
 client/package-lock.json
 
-server/node_modules
+server/node_modules/
+server/.env
 server/package-lock.json
