--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ JWT_SECRET=ASDAS!a$!^%&%!asdASDASD
 STRIPE_SECRET=sk_test_Mt0e9w6oIoxRFJXbmblOhwYi
 STRIPE_REDIRECT_URL=http://localhost:3000/stripe/callback
 STRIPE_SETTING_REDIRECT_URL=http://localhost:3000/dashboard/seller
+STRIPE_SUCCESS_URL=http://localhost:3000/stripe/success
+STRIPE_CANCEL_URL=http://localhost:3000/stripe/cancel
